--- a/src/template/index.html
+++ b/src/template/index.html
@@ -1,41 +1,39 @@
 <!DOCTYPE html>
 <html lang="ru-RU">
-<head>
-    <meta name="robots" content="noindex">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta name="robots" content="noindex" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Test</title>
-    <meta name="description" content="">
+    <meta name="description" content="" />
 
     @@include("base/favicon.html",{})
 
     <meta property="og:title" content="" />
-    <meta property="og:description"  content="" />
+    <meta property="og:description" content="" />
     <meta property="og:url" content="" />
     <meta property="og:image" content="" />
 
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
 
-    <meta name="format-detection" content="telephone=no">
-</head>
-<body>
-
+    <meta name="format-detection" content="telephone=no" />
+  </head>
+  <body>
     <!-- @@include("base/preloader.html",{}) -->
-<!--    @@include("menu/menu.html",{})-->
+    <!--    @@include("menu/menu.html",{})-->
 
     @@include("pages/home.html",{})
+    <!-- @@include("pages/delivery.html",{}) -->
 
-<!--    @@include("modal/modal-form.html",{})-->
-<!--    @@include("modal/modal-politics.html",{})-->
-<!--    @@include("modal/modal-video.html",{})-->
+    <!--    @@include("modal/modal-form.html",{})-->
+    <!--    @@include("modal/modal-politics.html",{})-->
+    <!--    @@include("modal/modal-video.html",{})-->
 
     <script src="js/libraries/libraries.js"></script>
     <!-- ! Удалить -->
-<!--    @@include("demo/template.html",{})-->
+    <!--    @@include("demo/template.html",{})-->
     <!-- ! Удалить -->
     <script src="js/main/main.js"></script>
-
-</body>
+  </body>
 </html>
-
