создание delivery-intro

--- a/src/template/section/delivery-intro.html
+++ b/src/template/section/delivery-intro.html
@@ -3,5 +3,33 @@
     <h2 class="delivery-intro__title title title--size-md">
       Доставка и оплата
     </h2>
+    <p class="text">
+      Стоимость доставки рассчитывается из тарифов транспортных компаний. За
+      услуги доставки оплата при получении вашего заказа.
+    </p>
+    <p class="text">
+      Приблизительную стоимость доставки в ваш город — уточняйте у нас
+    </p>
+    <div class="delivery-intro-cards">
+      <div class="delivery-intro-card">
+        <svg class="icon">
+          <use xlink:href="svg-sprite/sprite.svg#delivery-35"></use>
+        </svg>
+        <h4 class="delivery-intro-card-title">По Санкт-Петербургу и области</h4>
+        <p class="delivery-intro-card-text">
+          Доставка по СПБ от 450 руб. По области от 900 руб.
+        </p>
+      </div>
+      <div class="delivery-intro-card">
+        <svg class="icon">
+          <use xlink:href="svg-sprite/sprite.svg#delivery-box"></use>
+        </svg>
+        <h4 class="delivery-intro-card-title">По России</h4>
+        <p class="delivery-intro-card-text">
+          Доставляем транспортными компаниями от 700 руб. кроватки, от 390 руб.
+          небольшие товары
+        </p>
+      </div>
+    </div>
   </div>
 </section>
