--- a/src/scss/template/section/_index.scss
+++ b/src/scss/template/section/_index.scss
@@ -1,10 +1,11 @@
-@import 'main';
-@import 'cover';
-@import 'catalogue';
-@import 'actions';
-@import 'about-beds';
-@import 'conditions';
-@import 'reviews';
-@import 'articles';
-@import 'selection';
-@import 'about';
+@import "main";
+@import "cover";
+@import "catalogue";
+@import "actions";
+@import "about-beds";
+@import "conditions";
+@import "reviews";
+@import "articles";
+@import "selection";
+@import "about";
+@import "delivery-intro";
