Секции для delivery.html

--- a/src/template/section/delivery-intro.html
+++ b/src/template/section/delivery-intro.html
@@ -10,8 +10,8 @@
     <p class="text">
       Приблизительную стоимость доставки в ваш город — уточняйте у нас
     </p>
-    <div class="delivery-intro-cards">
-      <div class="delivery-intro-card">
+    <div class="delivery-intro-cards grid">
+      <div class="delivery-intro-card col-1@lg">
         <svg class="icon">
           <use xlink:href="svg-sprite/sprite.svg#delivery-35"></use>
         </svg>
@@ -20,7 +20,7 @@
           Доставка по СПБ от 450 руб. По области от 900 руб.
         </p>
       </div>
-      <div class="delivery-intro-card">
+      <div class="delivery-intro-card col-1@lg">
         <svg class="icon">
           <use xlink:href="svg-sprite/sprite.svg#delivery-box"></use>
         </svg>
