--- a/src/template/components/breadcrumbs.html
+++ b/src/template/components/breadcrumbs.html
@@ -1,9 +1,9 @@
 <div class="container">
-  <div class="breadcrumbs-wrapper">
+  <nav class="breadcrumbs">
     <svg class="icon order-2@lg">
       <use xlink:href="svg-sprite/sprite.svg#arrow-bread"></use>
     </svg>
-    <a class="breadcrumbs-link order-1@lg normal">Главная</a>
+    <a class="breadcrumbs-link order-1@lg normal" href="/">Главная</a>
     <a class="breadcrumbs-link order-3@lg hidden">Доставка и оплата</a>
-  </div>
+  </nav>
 </div>
