--- a/src/scss/components/breadcrumbs/_breadcrumbs.scss
+++ b/src/scss/components/breadcrumbs/_breadcrumbs.scss
@@ -1,8 +1,8 @@
 .breadcrumbs {
   position: relative;
-  padding: size(73) 0 size(24);
+  padding: size(68) 0 size(20);
   @include media(lg) {
-    padding: size(107) 0 size(51);
+    padding: size(144) 0 size(29);
   }
   display: flex;
   align-items: center;
@@ -40,6 +40,13 @@
     }
     .hidden {
       display: block;
+    }
+    &::before {
+      position: absolute;
+      width: 100%;
+      bottom: size(60);
+      border-top: 1px solid #e1dedd;
+      content: "";
     }
   }
 }
