Сверстаный delivery-process

--- a/src/template/section/delivery-process.html
+++ b/src/template/section/delivery-process.html
@@ -6,25 +6,25 @@
     <div class="delivery-process__blocks">
       <div class="process__block">
         <h3 class="process__block-count">01</h3>
-        <p class="process__block-text">
+        <p class="process__block-text text_md">
           Мы сами оформляем все документы по доставке
         </p>
       </div>
       <div class="process__block">
         <h3 class="process__block-count">02</h3>
-        <p class="process__block-text">
+        <p class="process__block-text text_md">
           Отвозим ваш заказ в транспортную компанию
         </p>
       </div>
       <div class="process__block">
         <h3 class="process__block-count">03</h3>
-        <p class="process__block-text">
+        <p class="process__block-text text_md">
           Далее отправляем вам накладную, где указан трэк номер
         </p>
       </div>
       <div class="process__block">
         <h3 class="process__block-count">04</h3>
-        <p class="process__block-text">
+        <p class="process__block-text text_md">
           По прибытию груза в ваш город — вам сообщать в смс сообщении
         </p>
       </div>
