--- a/src/scss/config/_animation.scss
+++ b/src/scss/config/_animation.scss
@@ -1,7 +1,13 @@
-//$animationDelay:(
-//    value:(100, 250),
-//    bp:('default', 'lg'),
-//);
+$animationDelay: (
+  value: (
+    100,
+    250,
+  ),
+  bp: (
+    "default",
+    "lg",
+  ),
+);
 //* Формат
 //* 'fadeIn': (         // Имя анимации
 //*     active: true,   // Вывод анимации
@@ -9,17 +15,83 @@
 //* ),
 
 $animation: (
-    'fadeIn':           (active: false, bp: ('default', 'lg')),
-    'fadeInUp':         (active: false, bp: ('default')),
-    'fadeInDown':       (active: false, bp: ('default')),
-    'fadeInLeft':       (active: false, bp: ('default')),
-    'fadeInLeftBottom': (active: false, bp: ('default')),
-    'fadeInLeftTop':    (active: false, bp: ('default')),
-    'fadeInRight':      (active: false, bp: ('default')),
-    'fadeInRightBottom':(active: false, bp: ('default')),
-    'fadeInRightTop':   (active: false, bp: ('default')),
-    'buzz-out':         (active: false, bp: ('default')),
-    'orbit':            (active: false, bp: ('default')),
-    'slideInUp':        (active: false, bp: ('default')),
-    'slideInDown':      (active: false, bp: ('default')),
+  "fadeIn": (
+    active: true,
+    bp: (
+      "default",
+      "lg",
+    ),
+  ),
+  "fadeInUp": (
+    active: true,
+    bp: (
+      "default",
+    ),
+  ),
+  "fadeInDown": (
+    active: true,
+    bp: (
+      "default",
+    ),
+  ),
+  "fadeInLeft": (
+    active: true,
+    bp: (
+      "default",
+    ),
+  ),
+  "fadeInLeftBottom": (
+    active: false,
+    bp: (
+      "default",
+    ),
+  ),
+  "fadeInLeftTop": (
+    active: false,
+    bp: (
+      "default",
+    ),
+  ),
+  "fadeInRight": (
+    active: false,
+    bp: (
+      "default",
+    ),
+  ),
+  "fadeInRightBottom": (
+    active: false,
+    bp: (
+      "default",
+    ),
+  ),
+  "fadeInRightTop": (
+    active: false,
+    bp: (
+      "default",
+    ),
+  ),
+  "buzz-out": (
+    active: false,
+    bp: (
+      "default",
+    ),
+  ),
+  "orbit": (
+    active: false,
+    bp: (
+      "default",
+    ),
+  ),
+  "slideInUp": (
+    active: true,
+    bp: (
+      "default",
+    ),
+  ),
+  "slideInDown": (
+    active: true,
+    bp: (
+      "default",
+    ),
+  ),
 );
