--- a/src/scss/template/section/_index.scss
+++ b/src/scss/template/section/_index.scss
@@ -1,11 +1,15 @@
 @import "main";
-@import "cover";
-@import "catalogue";
-@import "actions";
-@import "about-beds";
-@import "conditions";
-@import "reviews";
-@import "articles";
-@import "selection";
-@import "about";
+// @import "cover";
+// @import "catalogue";
+// @import "actions";
+// @import "about-beds";
+// @import "conditions";
+// @import "reviews";
+// @import "articles";
+// @import "selection";
+// @import "about";
 @import "delivery-intro";
+@import "delivery-process";
+@import "payment";
+@import "inner-page";
+@import 'contact'; 
