--- a/src/template/pages/delivery.html
+++ b/src/template/pages/delivery.html
@@ -1,5 +1,11 @@
 @@include("../base/header.html",{})
-<main class="delivery-page">
+
+<main class="main">
+  <div class="inner-page">
+    <div class="container">@@include("../components/breadcrumbs.html",{})</div>
+  </div>
   @@include("../section/delivery-intro.html",{})
+  @@include("../section/delivery-process.html",{})
+  @@include("../section/payment.html",{})
 </main>
 @@include("../base/footer.html",{})
