--- a/src/template/section/delivery-intro.html
+++ b/src/template/section/delivery-intro.html
@@ -10,8 +10,8 @@
     <p class="text_ps">
       Приблизительную стоимость доставки в ваш город — уточняйте у нас
     </p>
-    <div class="delivery-intro-cards grid">
-      <div class="delivery-intro-card col-1@lg">
+    <div class="delivery-intro-cards grid wow fadeIn">
+      <div class="delivery-intro-card col-1@md">
         <svg class="icon">
           <use xlink:href="svg-sprite/sprite.svg#delivery-35"></use>
         </svg>
@@ -21,7 +21,7 @@
         <p class="delivery-intro-card-text">Доставка по СПБ от 450 руб.</p>
         <p class="delivery-intro-card-text">По области от 900 руб.</p>
       </div>
-      <div class="delivery-intro-card col-1@lg">
+      <div class="delivery-intro-card col-1@md">
         <svg class="icon">
           <use xlink:href="svg-sprite/sprite.svg#delivery-box"></use>
         </svg>
