--- a/src/template/section/payment.html
+++ b/src/template/section/payment.html
@@ -1,7 +1,7 @@
 <section id="payment" class="payment">
   <div class="container">
     <h2 class="payment__title title title--size-md">Оплата</h2>
-    <div class="payment-cards">
+    <div class="payment-cards wow fadeIn">
       <div class="payment-card">
         <svg class="icon">
           <use xlink:href="svg-sprite/sprite.svg#money"></use>
