--- a/src/scss/template/section/_requisites.scss
+++ b/src/scss/template/section/_requisites.scss
@@ -9,21 +9,27 @@
       margin: 0 auto;
     }
     @include media(lg) {
-      margin: 0 auto;
       width: 61%;
+      margin: 0 auto;
+    }
+    .requisit__wrapper {
+      @include media(lg) {
+        width: 83%;
+      }
     }
     .requisit {
       display: grid;
       grid-template-columns: 1fr;
       grid-template-rows: auto;
       height: 91px;
+      font-size: size(14);
       padding: size(15);
       color: #000;
       &:first-child {
         font-weight: 500;
       }
       @include media(lg) {
-        grid-template-columns: 35% 65%;
+        grid-template-columns: 40% 60%;
         grid-template-rows: auto;
         align-items: center;
         height: 57px;
