--- a/src/scss/template/section/_index.scss
+++ b/src/scss/template/section/_index.scss
@@ -13,3 +13,7 @@
 @import "payment";
 @import "inner-page";
 @import 'contact'; 
+@import 'requisites'; 
+@import 'questions'; 
+@import 'company'; 
+@import 'story'; 
