--- a/src/template/section/index.html
+++ b/src/template/section/index.html
@@ -1,3 +1,8 @@
 @@include("delivery-intro.html",{}) 
 @@include("delivery-process.html",{}) 
 @@include("payment.html",{}) 
+@@include("contact.html",{}) 
+@@include("requisites.html",{}) 
+@@include("questions.html",{}) 
+@@include("company.html",{}) 
+@@include("story.html",{}) 
