--- a/src/scss/template/section/_index.scss
+++ b/src/scss/template/section/_index.scss
@@ -12,9 +12,9 @@
 @import "delivery-process";
 @import "payment";
 @import "inner-page";
-@import 'contact'; 
-@import 'requisites'; 
-@import 'questions'; 
-@import 'company'; 
-@import 'story'; 
-@import '404'; 
+@import "contact";
+@import "requisites";
+@import "questions";
+@import "company";
+@import "story";
+@import 'pnf'; 
