--- a/src/template/index.html
+++ b/src/template/index.html
@@ -23,17 +23,17 @@
     <!-- @@include("base/preloader.html",{}) -->
     <!--    @@include("menu/menu.html",{})-->
 
-    @@include("pages/home.html",{})
+    <!-- @@include("pages/home.html",{}) -->
     <!-- @@include("pages/delivery.html",{}) -->
+    <!-- @@include("pages/contacts.html",{}) -->
+    <!-- @@include("pages/about_us.html",{}) -->
+    @@include("pages/pnf.html",{})
 
     <!--    @@include("modal/modal-form.html",{})-->
     <!--    @@include("modal/modal-politics.html",{})-->
     <!--    @@include("modal/modal-video.html",{})-->
 
     <script src="js/libraries/libraries.js"></script>
-    <!-- ! Удалить -->
-    <!--    @@include("demo/template.html",{})-->
-    <!-- ! Удалить -->
     <script src="js/main/main.js"></script>
   </body>
 </html>
