--- a/src/template/pages/pnf.html
+++ b/src/template/pages/pnf.html
@@ -4,6 +4,6 @@
   <div class="inner-page">
     <div class="container">@@include("../components/breadcrumbs.html",{})</div>
   </div>
-  <!-- @@include("../section/404.html",{}) -->
+  @@include("../section/pnf.html",{})
 </main>
 @@include("../base/footer.html",{})
